# ChangeLog for app-xemacs/oo-browser
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/oo-browser/ChangeLog,v 1.4 2008/04/28 18:03:57 armin76 Exp $

  28 Apr 2008; Raúl Porcel <armin76@gentoo.org> oo-browser-1.04.ebuild:
  alpha stable wrt #219332

  19 Mar 2008; Hans de Graaff <graaff@gentoo.org> metadata.xml:
  A herd should not be listed as maintainer

  03 Jun 2007; Hans de Graaff <graaff@gentoo.org> oo-browser-1.04.ebuild:
  Stable on amd64, ppc, ppc64, sparc, x86 as per #175560

*oo-browser-1.04 (26 Nov 2006)

  26 Nov 2006; Hans de Graaff <graaff@gentoo.org> +metadata.xml,
  +oo-browser-1.04.ebuild:
  Initial version.
