@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST oo-browser-1.04-pkg.tar.gz 515713 RMD160 4097b2923efaffaccf9d2a8e66c7a97d0152e537 SHA1 414729a6c22358672a80fd315d0535abcbbae106 SHA256 ff19676ea42b571de385597995468e51eee976cc1d71eb29b5ab6a88244f5fa7
+DIST oo-browser-1.05-pkg.tar.gz 517598 RMD160 1c6c298ded576cf6afbd4cefb25549dc55da4a49 SHA1 dfcb129d962a9bb2844d2f27af3216f7e8583177 SHA256 5a19fcfa2bd3a640ed05ed2a4151eadc45d2972d264e168d6dc39cc1636efc0e
 EBUILD oo-browser-1.04.ebuild 451 RMD160 927df32bc4c6f8cc7573b5802ef8f4f43f8dd915 SHA1 f7deb3a617332c723128be3c77c2e02044297f49 SHA256 8710530fea16856fd766b9d80757fe98012c4cc6f507d012ff561cba8bd97422
-MISC ChangeLog 702 RMD160 8c4c4168abac347e018190fb3fdeb0f35acfe6d1 SHA1 7eb52ff3e547061167cdb756841159865d89993d SHA256 2aee32e2641198dee2513c5713912fbfc81b9ebf26ad1c3e0fbe5e0b1c13d5cf
+EBUILD oo-browser-1.05.ebuild 493 RMD160 c4c95de639a5ea6daeeea0d5f70e4d34685ae7c7 SHA1 2d03e6738b2c12c8ec2d4c83aa2628795ea8c912 SHA256 6a7366b7c609ca4c8a081fef54d959359f3aa86e0c148f233de1f9f3eafd7833
+MISC ChangeLog 850 RMD160 ac49b573cceba8686f6988cbd308c10e57c4b1e3 SHA1 55ff9a9b06e445e64a2c616db99b5522bbfefbd5 SHA256 5628bb2e8b36247f2a6143243ed0cf7b1f8d72b6ad35028f62ca0a432507ab16
 MISC metadata.xml 161 RMD160 2ada37e120e2e09389d491679abb808bc1047e2d SHA1 1beb6cc75a12ea6231b2c900f6251f1bb22bf910 SHA256 d896eb54e7e82141c9d5a2e82955cbfa75c030dc5747822a6a2263f6a76a4512
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkmhHQgACgkQqj4ysMWt/vvXXgCg6zpxU31sKZQlSFOCebNcsfON
+43MAoPJWElTDHSswOP64kb54sYt9rU16
+=e22P
+-----END PGP SIGNATURE-----
